add login and signup files to with all their functions

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -32,13 +32,13 @@
             OR
 </div>
 <div id="emailandpassword">
-    <div><input type="tel" id="singupemail" placeholder="  Email"></div>
-    <div><input type="tel" id="singuppassword" placeholder="  Password"></div>
+    <input type="tel" id="singupemail" placeholder="  Email">
+    <input type="tel" id="singuppassword" placeholder="  Password">
     <div id="forgetpassword">Forget your <a href="#">password</a> ?</div>
-    <div><input type="submit" id="singupsubmit" value="Continue"></div>
-<div id="aleadyhaveaccount">New to Reddit? <a href="#">&nbspSign Up</a></div>
+    <input type="submit" id="singupsubmit" value="Continue">
+<div id="aleadyhaveaccount">New to Reddit? <a href="/signup">&nbspSign Up</a></div>
 
 </form>    
-
+<script src="./login.js"></script>
 </body>
 </html>
