hash and compare password and encrypt and send token

--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -38,11 +38,12 @@
     <div><input type="tel" id="singuppassword" placeholder="  Password"></div>
     <div><input type="tel" id="singupconfirmpassword" placeholder="  Confirm Password"></div>
     <div><input type="tel" id="singupuserimage" placeholder="  Add You Photo"></div>
+    <button id="singupsubmit">Continue</button>
+<div id="aleadyhaveaccount">Already a redditor? <a href="/login">&nbspLog In</a></div>
 
-    <div><input type="submit" id="singupsubmit" value="Continue"></div>
-<div id="aleadyhaveaccount">Already a redditor? <a href="#">&nbspLog In</a></div>
+</form> 
 
-</form>    
 
+<script src="./signup.js"></script>
 </body>
 </html>
