--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <div class="searchbar"><input placeholder="  Search Reddit" id="searchbar">
         <input type="submit" id="submit" value="">
         </div>
-        <div class="loginicon"><input id="loginicon" value="Log In" type="submit"></div>
+        <div class="loginicon"><a href="/login" ><input id="loginicon" value="Log In" type="submit"></a></div>
+        
 
     </section>
 
