added posts from the db to the guest and main user page

--- a/public/addpost/addpost.html
+++ b/public/addpost/addpost.html
@@ -35,7 +35,7 @@
     <div class="postinput"> <input type="text" placeholder="  Title" id="title">
         <input type="text" placeholder="  Image URL (optional)" id="imageurl">
         <input type="text" placeholder="Text" id="posttext">
-        <input type="submit" value="Post" id="postbutton">
+        <button id="postbutton">Post</button>
     </div>
 </div>
 
@@ -57,5 +57,6 @@
     </div>   
 </div>   
 </section>
+<script src="./addpost.js"></script>
 </body>
 </html>
