handle the mainpage and user profiels

--- a/public/usermainpage/index.html
+++ b/public/usermainpage/index.html
@@ -19,12 +19,11 @@
     
     <div class="useroptions">
         <div id="addpost"><i class="ri-add-fill"></i></div>
-        <div id="trending"><i class="ri-arrow-up-circle-line"></i></div>
-        <div id="notification"><i class="ri-notification-line"></i></div>
         <div class="userinfo">
             <img id="userimage" alt="userphoto" src="/public/images/Reddit.png">
             <div id="username">Username</div>
         </div>
+        <button id="logoutbutton">Log out</button>
         
     </div>
 
