--- a/public/usermainpage/index.html
+++ b/public/usermainpage/index.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="useroptions">
-        <div id="addpost"><i class="ri-add-fill"></i></div>
+        <a href="/addpost" id="addpost"><i class="ri-add-fill"></i></a>
         <div class="userinfo">
             <img id="userimage" alt="userphoto" src="/public/images/Reddit.png">
             <div id="username">Username</div>
