link all pages together

--- a/public/addpost/addpost.html
+++ b/public/addpost/addpost.html
@@ -17,7 +17,8 @@
         <input type="submit" id="submit" value="">
     </div> 
     <div class="useroptions">
-        
+        <a href="/main" class="homeicon"><i class="ri-home-wifi-line"></i></a>
+        <a  class="profileicon"><i class="ri-user-line"></i></a>
         <div class="userinfo">
             <img id="userimage" alt="userphoto" src="/public/images/Reddit.png">
             <div id="username">Username</div>
