--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
         <div class="searchbar"><input placeholder="  Search Reddit" id="searchbar">
         <input type="submit" id="submit" value="">
         </div>
+        <a href="/main" class="homeicon"><i class="ri-home-wifi-line"></i></a>
+        <a href="#" class="profileicon"><i class="ri-user-line"></i></a>
         <div class="loginicon"><a href="/login" ><input id="loginicon" value="Log In" type="submit"></a></div>
         
 
