--- a/public/users/index.html
+++ b/public/users/index.html
@@ -18,7 +18,9 @@
     </div>
     
     <div class="useroptions">
-        <div id="addpost"><i class="ri-add-fill"></i></div>
+        <a href="/addpost" id="addpost"><i class="ri-add-fill"></i></a>
+        <a href="/main" class="homeicon"><i class="ri-home-wifi-line"></i></a>
+        <a  class="profileicon"><i class="ri-user-line"></i></a>
         <div class="userinfo">
             <img id="userimage" alt="userphoto" src="/public/images/Reddit.png">
             <div id="username">Username</div>
