--- a/public/usermainpage/index.html
+++ b/public/usermainpage/index.html
@@ -19,6 +19,8 @@
     
     <div class="useroptions">
         <a href="/addpost" id="addpost"><i class="ri-add-fill"></i></a>
+        <a href="/main" class="homeicon"><i class="ri-home-wifi-line"></i></a>
+        <a  class="profileicon"><i class="ri-user-line"></i></a>
         <div class="userinfo">
             <img id="userimage" alt="userphoto" src="/public/images/Reddit.png">
             <div id="username">Username</div>
