--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -37,8 +37,9 @@
 
     <div><input type="tel" id="singuppassword" placeholder="  Password"></div>
     <div><input type="tel" id="singupconfirmpassword" placeholder="  Confirm Password"></div>
-    <div><input type="tel" id="singupuserimage" placeholder="  Add You Photo"></div>
+    <div><input type="tel" id="singupuserimage" placeholder="  Add You Photo (optional)"></div>
     <button id="singupsubmit">Continue</button>
+</div>
 <div id="aleadyhaveaccount">Already a redditor? <a href="/login">&nbspLog In</a></div>
 
 </form> 
