--- a/public/newmain/index.html
+++ b/public/newmain/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="usermainpage.css">
+    <link rel="stylesheet" type="text/css" href="newmain.css">
     <title>User Main</title>
 </head>
 <body>
@@ -128,6 +128,6 @@
         <div class="side"><p class="elementcontent">Reddit Inc © 2023. All rights reserved</p></div>
     </div>
 </section>
-<script src="./usermainpage.js"></script>
+<script src="./newmain.js"></script>
 </body>
 </html>
